--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -6,44 +6,49 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100px; /* Set a fixed height */
-  padding: 15px 30px;
-  background-color: #fff;
+  height: 10%; /* Set a fixed height */
+  padding: 15px 15px;
+  background-color: rgb(247, 244, 244);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
+.dark_mode_header{
+  margin-left: 0.5%;
+  color: black;
+
+}
 .logo {
-  height: 100px;
+  margin-left: 0%;
+  flex-shrink: 0;
+  height: 300%;
+  width: 10%;
   object-fit: contain;
 }
-
-.searchBar {
-  left: 300px;
-  height: 45px;
-  width: 800px;
-  margin: 0 20px;
-  padding: 8px;
+.searchBox {
+  height: 70%;
+  width: 42%;
   border: 3px solid rgb(0, 6, 122);
   border-radius: 4px;
   background-color: white;
   caret-color: black;
+  margin-right: 0%;
+  margin-left: 4%;
 }
 
-.authButtons {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+.search_icon{
+  margin-left: -4%;
+  height: 105.5%;
+  width:10%
 }
-
 /* Login Button (Style) */
 .loginButton {
-  padding: 0 15px;
+  margin-left: 15%;
+  padding: 0 5px;
   width: 140px;
   height: 45px;
   background: rgb(0, 6, 125);
