--- a/client/src/components/FilterPanel/FilterPanel.module.css
+++ b/client/src/components/FilterPanel/FilterPanel.module.css
@@ -1,17 +1,14 @@
 .filterPanel {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  position: fixed;
-  transform: translateX(-50%);
-  top: 13%;
-  left: 50%;
+  justify-content: center;
   width: 40%;
-  height: 70px;
-  padding: 12px 24px;
+  height: 7%;
+  flex-shrink: 0;
+  /* padding: 12px 24px; */
   background-color: rgb(248, 248, 248); /* Customize as needed */
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  z-index: 100;
   border-radius: 10px;
   gap: 10px; /* Reduced space between filter button and category buttons */
 }
