--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
   width: 100%;
   height: 10%; /* Set a fixed height */
   padding: 15px 15px;
