--- a/client/src/pages/Sell_item/Sell.module.css
+++ b/client/src/pages/Sell_item/Sell.module.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 .sellPage {
+  display: flex;
+  position: fixed;
   font-family: "Roboto", sans-serif;
   background: linear-gradient(to bottom, #f5f5f5, #e0e0e0);
   min-height: 100vh;
