--- a/client/src/components/FilterPanel/FilterPanel.module.css
+++ b/client/src/components/FilterPanel/FilterPanel.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   width: 40%;
-  height: 7%;
+  height: 60px;
   flex-shrink: 0;
   /* padding: 12px 24px; */
   background-color: rgb(248, 248, 248); /* Customize as needed */
