--- a/client/src/components/ProductGrid/ProductCard.module.css
+++ b/client/src/components/ProductGrid/ProductCard.module.css
@@ -5,12 +5,16 @@
   border-radius: 8px;
   padding: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-  text-align: center;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card img {
   width: 100%;
   height: 50%;
+  object-fit: cover;
   margin-bottom: 8px;
 }
