--- a/client/src/components/ProductGrid/ProductGrid.module.css
+++ b/client/src/components/ProductGrid/ProductGrid.module.css
@@ -3,16 +3,16 @@
   flex-wrap: wrap;
   justify-content: center;
   width: 80%;
-  height: 420%;
+  height: 960px;
   gap: 12px;
   padding: 10px;
   margin: 0 auto;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 .cardWrapper {
   flex: 0 0 calc(25% - 12px); /* 4 cards per row */
   height: calc(
     100% / 3
-  ); /* 3 rows => each takes 1/3 of gridContainer's height */
+  ); /* 3 rows → each cardWrapper takes 1/3 height of gridContainer */
   box-sizing: border-box;
 }
