--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -4,8 +4,6 @@
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  /* overflow-y: auto; */
-  box-sizing: border-box;
 }
 
 /* Header at top */
@@ -16,11 +14,10 @@
 /* Section containing filter and product grid (scrollable) */
 .scrollableSection {
   width: 100%;
-  height: calc(100vh - 80px); /* Adjust if header height is different */
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* REMOVE height: calc(...) and overflow-y if set */
 }
 
 /* FilterPanel spacing */
@@ -30,5 +27,5 @@
 
 /* ProductGrid spacing from FilterPanel */
 .scrollableSection > :nth-child(2) {
-  margin-top: 1%;
+  margin-top: 3%;
 }
