--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -164,3 +164,9 @@
 .signupButton:hover span:nth-child(6) {
   transition-delay: 0.5s;
 }
+
+.Cart {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+}
