--- a/client/src/components/ProductGrid/ProductGrid.module.css
+++ b/client/src/components/ProductGrid/ProductGrid.module.css
@@ -1,18 +1,15 @@
 .gridContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  width: 80%;
-  height: 960px;
-  gap: 12px;
-  padding: 10px;
+  justify-content: flex-start;
+  gap: 16px;
+  padding: 20px;
+  width: 90%;
   margin: 0 auto;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
+
 .cardWrapper {
   flex: 0 0 calc(25% - 12px); /* 4 cards per row */
-  height: calc(
-    100% / 3
-  ); /* 3 rows → each cardWrapper takes 1/3 height of gridContainer */
   box-sizing: border-box;
 }
