--- a/client/src/components/ProductGrid/ProductCard.module.css
+++ b/client/src/components/ProductGrid/ProductCard.module.css
@@ -21,7 +21,7 @@
 
 .card img {
   width: 100%;
-  height: 180px; /* Set a fixed height for better consistency */
+  height: 80%; /* Set a fixed height for better consistency */
   object-fit: cover;
   border-radius: 4px;
   margin-bottom: 12px;
